assets/front/scss/0_4_layout/_content.scss
#tc-page-wrap {
  position: relative;
  background: inherit;
  z-index: 1;
}

#tc-page-wrap,
#main-wrapper {
  &::before, &::after {
    display: table;
    content: '';
    line-height: 0
  }
}

#main-wrapper,
#content {
  padding-bottom:$base-line-height*2;
}

.container[role="main"] {
  margin-top: 2em;
}


//slider section

//slider color
.section-slider {
  .filter {
    @include filter($black, $white, 0.5);
    + .slider-text { color: $white; }
  }
}


.slider-text > h2 { margin:0; line-height: 1.1 }
.slider-text > h2 + h3 { margin-top:0; margin-bottom: $base-line-height; }

.section-slider {
  @extend %vertical-align-parent;
  overflow: hidden;
}

[id^=customizr-slider-] {

  .carousel-caption > h1 {
      margin: 0;
      line-height: 1.1;
      font-weight: 700;
      font-size: 2.98598em;
  }

  h1.very-big {
    font-size: 65px;
    line-height: 1.4em;
    margin-bottom: 0.2em;
  }

  .czrs-subtitle {
      margin-top: 0;
      margin-bottom: 0.5em;
      font-size: 30px;
  }

  .bg-link {
    z-index: 4
  }
  .btn-edit {
    position: absolute;
    &.slider-btn-edit {
      bottom: 10px;
      left: 10px
    }
    &.slide-btn-edit {
      bottom: 10%;
      right: 10px;
      z-index: 4
    }
  }
  .carousel-inner,
  .carousel-cell {
    width: 100%;
    height: 100%;
    overflow: hidden;
  }
}

.czr-slider-holder {
  position: relative;
  height: 100%;
  width: 100%;
}

#main-wrapper .section.custom  {
  margin: $base-line-height*2;
}

//formatting
ol {
  li li {
    margin-left: $base-line-height;
  }
  counter-reset: item;
  li:before {
    content: counters(item, ".") ".";
    counter-increment: item;
    padding-right: $base-line-height/2;
  }
}
ul:not(.socials):not(.tags) {
  .tc-content-inner & {
    list-style: square inside;
  }
}
ol, ul {
  ol, ul {
    margin-left: $base-line-height * .8;
  }
}


table {
  @extend %table;
}

dl {
  margin-bottom:  $base-line-height;
  dt {
    text-align: left;
    position: relative;
    padding : $base-line-height $base-line-height $base-line-height/2 $base-line-height;
    &::before {
      content: "";
      position: absolute;
      width: $base-line-height;
      height: 2px;
      bottom: calc(#{$base-line-height} - 6px);
      left: 0;
      background: $black;
    }
  }
  .wp-caption-dt::before { content: none }
  dd {
    padding-left : $base-line-height;
  }
}


/* featured pages*/
.marketing { margin-bottom: $base-line-height * 4 }
.featured-page {
  margin-top: $base-line-height * 2;
  position: relative;
  text-align:center;

  .czr-thumb-wrapper {
    overflow: hidden;
  }
  .no-effect .czr-thumb-wrapper {
    margin-bottom: $base-line-height*2
  }

  & img {
    @include transform( translate3d(0 ,0, 0) );
    backface-visibility: hidden;
  }
  .center-images-disabled & img {
    /* temporary CSS centering */
    @include transform( translate(-50%, -50%) ); /* fallback for those browsers w/o translate3d transform property*/
    @include transform( translate3d(-50%, -50%, 0) );
    top: 50%;
    left: 50%;
    /*position: relative;*/
  }
  @at-root .fp-title,
           .fp-button,
    [class*=fp-text-] {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
  }

  @at-root .fp-title {
   /* @extend .semi-bold;*/
    line-height: $base-line-height;
    margin-top : $base-line-height/2;
    margin-bottom: $base-line-height;
    word-break: break-word;
    &::after {
      content: "";
      position: absolute;
      width: $base-line-height;
      background: $black;
      height: 2px;
      top: 100%;
      left: 0;
      right: 0;
      margin: $base-line-height/4 auto 0;
      @include transition (all 0.6s ease);
      @at-root .widget-front.hover & {
        background: $grey-dark;
        width: $base-line-height*2;
      }
    }
  }

  .btn-edit { margin: -1em 0 0 }

  @at-root [class*=fp-text-] {
    margin: $base-line-height*2 auto;
    color: $grey-dark;
   /* @extend .small;*/
  }

  @at-root .fp-button {
    display: inline-block;
    padding: 0;
    .btn-more {
      margin-bottom: $base-line-height*2
    }
  }



  & .widget-front.hover {
    color: $grey-dark;
  }
}

